Closed Bug 125543 Opened 24 years ago Closed 23 years ago

Prints page 1 and 3 but not 2...

Categories

(Core :: Printing: Output, defect, P1)

x86
All
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: mugendai, Assigned: karnaze)

References

()

Details

(Keywords: dataloss, topembed+, Whiteboard: [adt2][FIXED_ON_TRUNK])

Attachments

(2 files, 1 obsolete file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.8) Gecko/20020204 BuildID: 2002020406 I printed this webpage: http://www.snopes2.com/cokelore/acid.htm And the footer said page 1 of 2... Page 1 had the stuff I would expect for page 1. Page 2 had the stuff I would've expected for a page 3, if there had been one. And all the content that should've been on page 2, was skipped all together. Reproducible: Always Steps to Reproduce: 1. Open web page: http://www.snopes2.com/cokelore/acid.htm 2. Click the prtint button. 3. Click Print. Actual Results: Two pages are printed, a large portion of the webpage is left out between page one and two. Expected Results: Three pages should be printed, with all of the origional webpage content shown. Printer is a Lexmak 3200, using default WinXP driver.
confirming. I can reproduce this on my win 98 system with 2/14 trunk build. 2nd page does not get printed out. its skipped.
confirmed in print preview, linux as of cvs yesterday. setting to OS->all. There are a few print missing pages bugs, not sure if this is a dupe of one of them...
OS: Windows XP → All
Confirming on basis of comments.
Status: UNCONFIRMED → NEW
Ever confirmed: true
lost content for printing
Assignee: rods → karnaze
Keywords: nsbeta1
Target Milestone: --- → mozilla1.0
Attached patch somewhat reduced test case (obsolete) — Splinter Review
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt2]
nsbeta1+
Severity: normal → major
Status: NEW → ASSIGNED
Keywords: dataloss
Priority: -- → P1
Attachment #77867 - Attachment is obsolete: true
Blocks: 133948
The patch corrects some flaws in the special height reflow mechanism. Row groups are prevented from splitting in the reflow preceeding the special height reflow. Cells are only notified that they should observe a percent height element if the element is inside the table's cell. Percent height elements inside the body will have a height based on the page height when printing. The risk of the patch is limited to pages which have percent height table related elements or percent height elements inside table cells.
Comment on attachment 78356 [details] [diff] [review] patch to fix the bug r= alexsavulov
Comment on attachment 78356 [details] [diff] [review] patch to fix the bug r= alexsavulov
Attachment #78356 - Flags: review+
double r= means 1/2sr= ;-)
Attachment #78356 - Flags: superreview+
Keywords: adt1.0.0, approval
Blocks: 136732
The patch has been checked into the trunk. I'm leaving it open because it may make it into the m1.0 branch.
Remove adt1.0.0. Let it bake on the trunk until Monday, let Sujay take a good look at it, then renominate for inclusion in the 1.0 branch.
Keywords: adt1.0.0topembed
Keywords: topembedtopembed+
Comment on attachment 78356 [details] [diff] [review] patch to fix the bug a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #78356 - Flags: approval+
sujay: Could you verify the fix on the trunk? Thanks!
Whiteboard: [adt2] → [adt2][FIXED_ON_TRUNK]
Printing all the 3 pages correctly. Verified on 2002-04-12-06-trunk. WIN2K.
Keywords: adt1.0.0
Resolving as FIXED. Please add fixed1.0.0 keyword after the fix has been checked into the 1.0.0 branch.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
This is a pretty big patch. It looks like amar tested the case presented in this bug, but what kind of testing needs to be done around the changes in the code. For example, it looks like there were a lot of changes to tables.
The patch can affect pages with heights on table related elements as well as percent heights on elements inside table cells and the body. There are a number of regression tests that test these things which have passed. The patch has been baking on the trunk for 1 week and I haven't seen any regressions as a result of this patch. I hope amar and sujay have been looking for regressions as well.
verified on 4/16 trunk build.
Status: RESOLVED → VERIFIED
adt1.0.0+ on behalf of the adt. Please check into the branch today and add fixed1.0.0 to the keyword field.
Keywords: adt1.0.0adt1.0.0+
Keywords: fixed1.0.0
verified in 4/17 branch build. adding "verified1.0.0" keyword.
Keywords: verified1.0.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: